--- a/html/OilClickerPage.html
+++ b/html/OilClickerPage.html
@@ -1,5 +1,5 @@
 
-    <div class="headContainer">
+
         <div></div>
     </div>
     <div class="bodyRow">
@@ -11,7 +11,7 @@
             <div class="spacer"></div>
             <!-- ng-repeat="x in xContainer" !-->
             <!-- for(var i=0; i< Modules.length; i++){ Module = Modules[i] } !-->
-            <div class="buyableItem" ng-repeat="Module in $root.Modules">
+            <div class="buyableItem" ng-repeat="Module in $root.Modules" ng-show="Module.Category == 'oil'">
                 <div class="buyableCount">
                     <span>{{Module.Count}}</span>
                 </div>
@@ -19,10 +19,10 @@
                 <div class="buyableIcon"></div>
                 <div class="vertSpacer"></div>
                 <div class="itemName">{{Module.Name}}
-                    <br>EPS: {{Module.EnergyPS}}</div>
-                <div class="itemDesc">The power plant, although inefficent, is the bread and butter of Energy production for any devloping nation</div>
+                    <br>OPS: {{Module.OilPS}}</div>
+                <div class="itemDesc">{{Module.Description}}</div>
                 <div class="vertSpacer"></div>
-                <div class="itemCost">Cost: {{Module.Cost}}</div>
+                <div class="itemCost">Cost: {{Module.OilCost}}</div>
                 <div class="vertSpacer"></div>
                 <button ng-click="Buy(Module)">Buy</button>
             </div>
@@ -36,11 +36,11 @@
             </div>
             <div class="clickable">
                 <img id="EnergyClicker" src="images/oil-icon.png">
-                <button ng-click="addEnergy()">Add Energy</button>
+                <button ng-click="addOil()">Add Oil</button>
             </div>
             <div class="EnergyCount">
-                {{$root.Progress.Energy}} / {{$root.Progress.MaxEnergy}}
+                {{$root.Progress.Oil}} / {{$root.Progress.MaxOil}}
             </div>
-            <div>Energy Per Second (EPS): {{$root.Progress.EnergyPS}}</div>
+            <div>Oil Per Second (OPS): {{$root.Progress.OilPS}} Barrels</div>
         </div>
 
