--- a/html/PopClickerPage.html
+++ b/html/PopClickerPage.html
@@ -1,5 +1,4 @@
 
-    <div class="headContainer">
         <div></div>
     </div>
     <div class="bodyRow">
@@ -20,7 +19,7 @@
                 <div class="vertSpacer"></div>
                 <div class="itemName">{{Module.Name}}
                     <br>EPS: {{Module.EnergyPS}}</div>
-                <div class="itemDesc">The power plant, although inefficent, is the bread and butter of Energy production for any devloping nation</div>
+                <div class="itemDesc">{{Module.Description}}</div>
                 <div class="vertSpacer"></div>
                 <div class="itemCost">Cost: {{Module.Cost}}</div>
                 <div class="vertSpacer"></div>
@@ -39,8 +38,7 @@
                 <button ng-click="addEnergy()">Add Energy</button>
             </div>
             <div class="EnergyCount">
-                {{$root.Progress.Energy}} / {{$root.Progress.MaxEnergy}}
+                {{$root.Progress.Population}}
             </div>
-            <div>Energy Per Second (EPS): {{$root.Progress.EnergyPS}}</div>
         </div>
 
