--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="/js/controllers/EnergyController.js"></script>
     <script type="text/javascript" src="/js/factory/LoopFactory.js"></script>
     <script type="text/javascript" src="/js/factory/SaveFactory.js"></script>
-    <script type="text/javascript" src="/js/factory/ModuleFactory.js"></script>=
+    <script type="text/javascript" src="/js/factory/ModuleFactory.js"></script>
     <script type="text/javascript" src="/js/routes.js"></script>
     <script type="text/javascript" src="/js/controllers/OilController.js"></script>
     <script type="text/javascript" src="/js/controllers/PopulationController.js"></script>
@@ -52,7 +52,13 @@
             </div>
         </div>
     </div>
-    <div ui-view></div>
+
+
+        <div ui-view></div>
+    </div>
+
+        <!-- The code for the left side !-->
+        
 </body>
 
 </html>
