--- a/html/PopClickerPage.html
+++ b/html/PopClickerPage.html
@@ -1,15 +1,18 @@
-
-        <div></div>
-    </div>
     <div class="bodyRow">
-        <!-- Designated space for ads located on the far right. !-->
-        <div class="adCollumn"></div>
+        <div class="adCollumn" flex flex-order="1">
+            <p>Oil: {{$root.Progress.Oil}}</p>
+            <p>Energy: {{$root.Progress.Energy}}</p>
+            <p>Oil: {{$root.Progress.Money}}</p>
+            
+            <p>Oil Use: {{$root.Progress.NegOilPS}}</p>
+            <p>Energy Use: {{$root.Progress.NegEnergyPS}}</p>
+            <p>Money Use: {{$root.Progress.NegMoneyPS}}</p>
+        </div>
         <div class="vertSpacer"></div>
         <!-- Middle block, contains all the purchaseable things. !-->
         <div class="dataCollumn">
             <div class="spacer"></div>
             <!-- ng-repeat="x in xContainer" !-->
-            <!-- for(var i=0; i< Modules.length; i++){ Module = Modules[i] } !-->
             <div class="buyableItem" ng-repeat="Module in $root.Modules">
                 <div class="buyableCount">
                     <span>{{Module.Count}}</span>
@@ -18,7 +21,7 @@
                 <div class="buyableIcon"></div>
                 <div class="vertSpacer"></div>
                 <div class="itemName">{{Module.Name}}
-                    <br>EPS: {{Module.EnergyPS}}</div>
+                    <br>PPS: {{Module.EnergyPS}}</div>
                 <div class="itemDesc">{{Module.Description}}</div>
                 <div class="vertSpacer"></div>
                 <div class="itemCost">Cost: {{Module.Cost}}</div>
